--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </div>
       <div class="card" style="background-color:#d3d3d3;">
         <h2>My Family</h2>
-        <img src="Boi_and_Mez.jpg" width:"200" height="500" style="Boi and Mez">
+        <img src="Boi_and_Mez.jpg" width:"200" height="500" title="Boi and Mez">
 		<img src="Mez_and_Boi_at_Disneyland.jpg" width:"200" height="500" title= "Dad not paying attention">
         <h3>I have a little sister, my mom, my dad, and my dog Chico</h3>
         <p>Picture 1: My sister and I took this picture celebrating national siblings day.</p>
