--- a/Hobbies_section.html
+++ b/Hobbies_section.html
@@ -27,7 +27,7 @@
     
 	<div class="card" style="background-color:#d3d3d3;">
       <h2>Playing Video Games</h2>
-      <img src="Boi_playing_SWBF2.jpg" width="400" height="500">
+      <img src="Boi_playing_SWBF2.jpg" width="400" height="500" title="Boy playing SWBF2">
       <h3>The second most common thing I do during my free time. I usually play on my PS4 nowadays, but I do have an Xbox, a PC, and a Nintendo Switch. I usually play FPS games, but I do play platformers and even racing games here and there.</h3>
       <p>This is a picture of the game that I usually play. I do know how controversial the game is in itself, but I still have fun playing and I don't see myself not playing it anytime soon. (Unless I can get Spider-man anytime soon)</p>
     </div>
@@ -62,11 +62,7 @@
 		<br>
 		<li>I am actually Mexican NOT Phillipino</li>
 		<br>
-		<li>My first video game console was the original Xbox</li>
-		<br>
-		<li>You would've HATED me if you knew me as a kid (Unless your Ryan Macias, who experienced my stupid young self)</li>
-		<br>
-		<li>I was obsessed with Sonic the Hedgehog for about 8 years </li>    
+		<li>My first video game console was the original Xbox</li>   
 	</div>
   </div>
 
