--- a/Favorites_Section.html
+++ b/Favorites_Section.html
@@ -34,7 +34,7 @@
 	
 	<div class="card" style="background-color:#d3d3d3;">
       <h2>Favorite Super-Hero</h2>
-      <img src="Spider-man.jpg" width="700" height="400">
+      <img src="Spider-Man.jpg" width="700" height="400">
       <h3>SPIDER-MAN</h3>
       <p>The one superhero that always seemed to come back to me. Ever since I was a kid, I loved Spider-man. As like many kids did, I dressed up as Spider-man for Halloween and I always had a blast. Now that that is behind me, the next step is to watch the movies and play the games. The picture above is a picture taken from his latest game on the PS4.</p>
     </div>
