--- a/Hobbies_section.html
+++ b/Hobbies_section.html
@@ -20,7 +20,7 @@
   <div class="leftcolumn">
     <div class="card" style="background-color:#d3d3d3;">
       <h2>Sleeping</h2>
-      <img src="" width="400" height="500">
+      <img src="Sleepy_Boi.jpg" width="400" height="500" title="Boi sleeping">
       <h3>The one thing I always love to do, but sadly never get enough of.</h3>
       <p>This picture is moments before disaster struck. (My mom waking me up)</p>
     </div>
@@ -34,7 +34,7 @@
 	
 	<div class="card" style="background-color:#d3d3d3;">
       <h2>Listening to Music</h2>
-      <img src="spotify.jpg" width="500" height="300">
+      <img src="spotify.jpg" width="500" height="300" title="Spotify">
       <h3>The one hobby that I constantly do everyday. Listening to music is one of those things that is perfect for almost every moment of your life.</h3>
       <p>This picture is of one of the music streaming apps that I use. I have used this so much, and I use it so much that I needed to buy the premium so I can use it to it's full potential. I have made countless playlists for my many moods that I have songs for.</p>
     </div>
