--- a/Favorites_Section.html
+++ b/Favorites_Section.html
@@ -41,7 +41,7 @@
 	
 	<div class="card" style="background-color:#d3d3d3;">
       <h2>Favorite Sports Team</h2>
-      <img src="laker-game.jpg" width="300" height="400" title="Laker Game">
+      <img src="laker-game (2).jpg" width="300" height="400" title="Laker Game">
       <h3>LA Lakers</h3>
       <p>The team that has been pushed on me since I was a baby, and even before that. When my parents were still trying to name me, my mom's boss suggested the name Sha-kobe due to my Dad's love for the Lakers. It's the one team that we cheered for, even when they lost badly(Basically every game the past few years). We always went to go so at least two games per season and I loved going to the Staples Center to watch the Lakers.</p>
     </div>
