--- a/index.html
+++ b/index.html
@@ -51,8 +51,10 @@
 		</div>
     </div>
   </div>
+<table>
  <div class="footer">
   <h3>Nick Aguilar-Period 2-Advanced Website</h3>
-</div>
+ </div>
+</table>
 </body>
 </html>
