--- a/index.html
+++ b/index.html
@@ -19,9 +19,14 @@
     <div class="leftcolumn">
       <div class="card" style="background-color:#d3d3d3;">
         <h2>Basic Information</h2>
-        <img src="Boi.jpg" width:"200" height="500" title="Boi being Boi">
-        <h3>I am a 16 year old Junior that goes to Damien High School</h3>
-        <p>This picture was taken when I was on vacation in San Francisco and my sister and I were eating at the Sourdough Factory. While we ate, we waited for the conveyer belt to come by with a basket that instead of bread bowls in it, there was a bunny. We laughed every time due to it being so random that it was there.</p>
+		<table>
+			<tr>
+				<td> <img src="Boi.jpg" width:"200" height="500" title="Boi being Boi"> </td>
+        <td> <h3>I am a 16 year old Junior that goes to Damien High School</h3>
+        <p>This picture was taken when I was on vacation in San Francisco and my sister and I were eating at the Sourdough Factory. 
+			While we ate, we waited for the conveyer belt to come by with a basket that instead of bread bowls in it, there was a bunny. 
+			We laughed every time due to it being so random that it was there.</p>
+		</td>
       </div>
       <div class="card" style="background-color:#d3d3d3;">
         <h2>My Family</h2>
