--- a/index.html
+++ b/index.html
@@ -27,10 +27,12 @@
 			While we ate, we waited for the conveyer belt to come by with a basket that instead of bread bowls in it, there was a bunny. 
 			We laughed every time due to it being so random that it was there.</p>
 		</td>
+		  </table>
       </div>
       <div class="card" style="background-color:#d3d3d3;">
         <h2>My Family</h2>
         <img src="Boi_and_Mez.jpg" width:"200" height="500" title="Boi and Mez">
+		 <br>
 		<img src="Mez_and_Boi_at_Disneyland.jpg" width:"200" height="500" title= "Dad not paying attention">
         <h3>I have a little sister, my mom, my dad, and my dog Chico</h3>
         <p>Picture 1: My sister and I took this picture celebrating national siblings day.</p>
