--- a/index.html
+++ b/index.html
@@ -31,13 +31,18 @@
       </div>
       <div class="card" style="background-color:#d3d3d3;">
         <h2>My Family</h2>
-        <img src="Boi_and_Mez.jpg" width:"200" height="500" title="Boi and Mez">
-		 <br>
-		<img src="Mez_and_Boi_at_Disneyland.jpg" width:"200" height="500" title= "Dad not paying attention">
+	<table>
+		<tr>
+        <td><img src="Boi_and_Mez.jpg" width:"200" height="500" title="Boi and Mez"></td>
+		<td><img src="Mez_and_Boi_at_Disneyland.jpg" width:"200" height="500" title= "Dad not paying attention"></td>
+		</tr>
+		<tr>
         <h3>I have a little sister, my mom, my dad, and my dog Chico</h3>
         <p>Picture 1: My sister and I took this picture celebrating national siblings day.</p>
 		<p>Picture 2: My mom taking a picture of me and my sister, but my dad wasn't paying attention to the fact that she was taking a picture.</p>
-	  </div>
+	  <tr>
+	  </table>
+		</div>
     </div>
     <div class="rightcolumn">
       <div class="card" style="background-color:#d3d3d3;">
